[package]
name = "knstl_delegator"
version = "0.1.0"
edition = "2021"
authors = ["Sangwoo Park <psangwoo@users.noreply.github.com>"]
repository = "https://github.com/knstl/knstl-cosmwasm"
homepage = "https://konstellation.tech"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
chrono = "0.4"
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { path = "./packages/storage-plus", version = "0.13.4" }
cw20 = { path = "./packages/cw20", version = "0.13.4" }
cw2 = { path = "./packages/cw2", version = "0.13.4" }
cw-utils = { path = "./packages/utils", version = "0.13.4" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.1"
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = {version = "1.0.0"}
